# crispy-doom

./: .gitignore  Cargo.toml
rs-doom/: Cargo.toml  build.rs
rs-doom/src/: am_map.rs  automap.rs  coords.rs  fixed.rs  lib.rs  tables.rs
rs-doom/src/capi/: automap.rs  mod.rs
src/doom/: CMakeLists.txt  am_map.c
src/doom/rs/: am_map.h
