[package]
name = "rs-doom"
version = "0.1.0"
authors = ["Kalmár Róbert <rfrostkalmar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22.1"

[build-dependencies]
cbindgen = "0.19.0"

[lib]
crate-type = ["staticlib"]
